finally solve box behind img problem

--- a/src/sections/About/About.css
+++ b/src/sections/About/About.css
@@ -1,1 +1,69 @@
-/*# sourceMappingURL=About.css.map */
+section.aboutSection {
+  font-family: "Work Sans", sans-serif;
+  color: white;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto auto auto;
+  gap: 50px;
+}
+section.aboutSection h1 {
+  font-size: 1.4rem;
+  font-weight: 600;
+  letter-spacing: 1.2px;
+  grid-row: 1/2;
+  text-align: start;
+}
+section.aboutSection h1 span {
+  color: rgb(126, 234, 130);
+}
+section.aboutSection .aboutImgContainer {
+  display: flex;
+  position: relative;
+  grid-row: 2/3;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin-left: auto;
+  margin-right: auto;
+  opacity: 70%;
+  z-index: 5;
+}
+section.aboutSection .aboutImgContainer:hover {
+  opacity: 1;
+}
+section.aboutSection .aboutImgContainer .imgWrapper {
+  margin-left: auto;
+  margin-right: auto;
+  z-index: 3;
+}
+section.aboutSection .aboutImgContainer .imgWrapper img {
+  border-radius: 5px;
+  height: 230px;
+  width: auto;
+}
+section.aboutSection .aboutImgContainer .behindBox {
+  position: absolute;
+  top: 18px;
+  left: 18px;
+  height: 230px;
+  width: 230px;
+  border: 2px solid rgb(126, 234, 130);
+  border-radius: 5px;
+  transition: 0.1s ease-in-out;
+}
+section.aboutSection .aboutImgContainer .hovered {
+  top: 15px;
+  left: 15px;
+  transition: 0.1s ease-in-out 0.1s;
+}
+section.aboutSection .aboutTextContainer {
+  color: rgb(203, 203, 203);
+  grid-row: 3/4;
+  line-height: 25px;
+  display: grid;
+  grid-template-rows: auto;
+  gap: 20px;
+  font-weight: 600;
+}
+section.aboutSection .aboutTextContainer span {
+  color: rgb(126, 234, 130);
+}/*# sourceMappingURL=About.css.map */
